--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
+<IfModule mod_rewrite.c>
+<IfModule mod_negotiation.c>
+       Options -MultiViews
+   </IfModule>
 RewriteEngine On
 
 
@@ -11,8 +15,10 @@ RewriteRule ^ index.php [L]
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_URI} !^/public/
+RewriteCond %{REQUEST_URI} !^/public
+ RewriteRule ^(.*)$ public/$1 [L]
 RewriteRule ^(css|js|images|img|vendor|fonts|icons-reference|datepicker|upload)/(.*)$ public/$1/$2/$3/$4/$5/$6/$7/$8 [L,NC]
 
 RewriteCond %{HTTP:Authorization} ^(.*)
 RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
+</IfModule>
