--- a/.htaccess
+++ b/.htaccess
@@ -1,24 +1,19 @@
 <IfModule mod_rewrite.c>
-<IfModule mod_negotiation.c>
-       Options -MultiViews
-   </IfModule>
-RewriteEngine On
+    <IfModule mod_negotiation.c>
+        Options -MultiViews
+    </IfModule>
 
+    RewriteEngine On
 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)/$ /$1 [L,R=301]
+    # Redirect Trailing Slashes If Not A Folder...
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^(.*)/$ /$1 [L,R=301]
 
-RewriteCond %{REQUEST_URI} !(\.css|\.js|\.png|\.jpg|\.gif|robots\.txt)$ [NC]
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^ index.php [L]
+    # Handle Front Controller...
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^ index.php [L]
 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_URI} !^/public
- RewriteRule ^(.*)$ public/$1 [L]
-RewriteRule ^(css|js|images|img|vendor|fonts|icons-reference|datepicker|upload)/(.*)$ public/$1/$2/$3/$4/$5/$6/$7/$8 [L,NC]
-
-RewriteCond %{HTTP:Authorization} ^(.*)
-RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
-</IfModule>
+    # Handle Authorization Header
+    RewriteC
+    </IfModule>
