--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
     ],
     "post-install-cmd": [
       "php artisan clear-compiled",
-      "chmod -R 777 app/storage"
+      "chmod -R 777 app/"
     ]
   },
   "config": {
