--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
     ],
     "post-install-cmd": [
       "php artisan clear-compiled",
-      "chmod -R 777 app/"
+      "php artisan optimize",
+      "chmod -R 777 public/"
     ]
   },
   "config": {
