--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,18 @@
       "php artisan clear-compiled",
       "php artisan optimize",
       "chmod -R 777 public/"
+    ],
+    "pre-install-cmd": [
+        "php artisan clear-compiled"
+    ],
+    "post-install-cmd": [
+        "php artisan optimize"
+    ],
+    "pre-update-cmd": [
+        "php artisan clear-compiled"
+    ],
+    "post-update-cmd": [
+        "php artisan optimize"
     ]
   },
   "config": {
